force-app/main/default/objects/ImpossibleProfiles__x/ImpossibleProfiles__x.object-meta.xml
<CustomObject>
    <description>Mirrored profile object via Apex connector</description>
    <externalDataSource>Impossible</externalDataSource>
    <externalName>ImpossibleProfiles</externalName>
    <label>Impossible profile</label>
    <pluralLabel>Impossible profiles</pluralLabel>
</CustomObject>