force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsaccesscmc__c.field-meta.xml
<CustomField>
    <fullName>permissionsaccesscmc__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsaccesscmc</externalDeveloperName>
    <label>Access Community Management</label>
    <type>Checkbox</type>
</CustomField>