force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsactivatecontract__c.field-meta.xml
<CustomField>
    <fullName>permissionsactivatecontract__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsactivatecontract</externalDeveloperName>
    <label>Activate Contracts</label>
    <type>Checkbox</type>
</CustomField>