force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsactivateorder__c.field-meta.xml
<CustomField>
    <fullName>permissionsactivateorder__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsactivateorder</externalDeveloperName>
    <label>Activate Orders</label>
    <type>Checkbox</type>
</CustomField>