force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsactivitiesaccess__c.field-meta.xml
<CustomField>
    <fullName>permissionsactivitiesaccess__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsactivitiesaccess</externalDeveloperName>
    <label>Access Activities</label>
    <type>Checkbox</type>
</CustomField>