force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsaddanalyticsremoteconnections__c.field-meta.xml
<CustomField>
    <fullName>permissionsaddanalyticsremoteconnections__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsaddanalyticsremoteconnections</externalDeveloperName>
    <label>Add Analytics Remote Connections</label>
    <type>Checkbox</type>
</CustomField>