force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsadddirectmessagemembers__c.field-meta.xml
<CustomField>
    <fullName>permissionsadddirectmessagemembers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsadddirectmessagemembers</externalDeveloperName>
    <label>Add People to Direct Messages</label>
    <type>Checkbox</type>
</CustomField>