force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsallowemailic__c.field-meta.xml
<CustomField>
    <fullName>permissionsallowemailic__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsallowemailic</externalDeveloperName>
    <label>Email-Based Identity Verification Option</label>
    <type>Checkbox</type>
</CustomField>