force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsallowlightninglogin__c.field-meta.xml
<CustomField>
    <fullName>permissionsallowlightninglogin__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsallowlightninglogin</externalDeveloperName>
    <label>Lightning Login User</label>
    <type>Checkbox</type>
</CustomField>