force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsallowuniversalsearch__c.field-meta.xml
<CustomField>
    <fullName>permissionsallowuniversalsearch__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsallowuniversalsearch</externalDeveloperName>
    <label>Knowledge One</label>
    <type>Checkbox</type>
</CustomField>