force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsallowvieweditconvertedleads__c.field-meta.xml
<CustomField>
    <fullName>permissionsallowvieweditconvertedleads__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsallowvieweditconvertedleads</externalDeveloperName>
    <label>View and Edit Converted Leads</label>
    <type>Checkbox</type>
</CustomField>