force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsallowviewknowledge__c.field-meta.xml
<CustomField>
    <fullName>permissionsallowviewknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsallowviewknowledge</externalDeveloperName>
    <label>Allow View Knowledge</label>
    <type>Checkbox</type>
</CustomField>