force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsapexrestservices__c.field-meta.xml
<CustomField>
    <fullName>permissionsapexrestservices__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsapexrestservices</externalDeveloperName>
    <label>Apex REST Services</label>
    <type>Checkbox</type>
</CustomField>