force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsapienabled__c.field-meta.xml
<CustomField>
    <fullName>permissionsapienabled__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsapienabled</externalDeveloperName>
    <label>API Enabled</label>
    <type>Checkbox</type>
</CustomField>