force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsassignpermissionsets__c.field-meta.xml
<CustomField>
    <fullName>permissionsassignpermissionsets__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsassignpermissionsets</externalDeveloperName>
    <label>Assign Permission Sets</label>
    <type>Checkbox</type>
</CustomField>