force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsassigntopics__c.field-meta.xml
<CustomField>
    <fullName>permissionsassigntopics__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsassigntopics</externalDeveloperName>
    <label>Assign Topics</label>
    <type>Checkbox</type>
</CustomField>