force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsauthorapex__c.field-meta.xml
<CustomField>
    <fullName>permissionsauthorapex__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsauthorapex</externalDeveloperName>
    <label>Author Apex</label>
    <type>Checkbox</type>
</CustomField>