force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsbulkapiharddelete__c.field-meta.xml
<CustomField>
    <fullName>permissionsbulkapiharddelete__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsbulkapiharddelete</externalDeveloperName>
    <label>Bulk API Hard Delete</label>
    <type>Checkbox</type>
</CustomField>