force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsbulkmacrosallowed__c.field-meta.xml
<CustomField>
    <fullName>permissionsbulkmacrosallowed__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsbulkmacrosallowed</externalDeveloperName>
    <label>Run Macros on Multiple Records</label>
    <type>Checkbox</type>
</CustomField>