force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscampaigninfluence2__c.field-meta.xml
<CustomField>
    <fullName>permissionscampaigninfluence2__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscampaigninfluence2</externalDeveloperName>
    <label>Campaign Influence</label>
    <type>Checkbox</type>
</CustomField>