force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscanapprovefeedpost__c.field-meta.xml
<CustomField>
    <fullName>permissionscanapprovefeedpost__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscanapprovefeedpost</externalDeveloperName>
    <label>Can Approve Feed Post and Comment</label>
    <type>Checkbox</type>
</CustomField>