force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscaneditdatapreprecipe__c.field-meta.xml
<CustomField>
    <fullName>permissionscaneditdatapreprecipe__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscaneditdatapreprecipe</externalDeveloperName>
    <label>Edit Dataset Recipes</label>
    <type>Checkbox</type>
</CustomField>