force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscaninsertfeedsystemfields__c.field-meta.xml
<CustomField>
    <fullName>permissionscaninsertfeedsystemfields__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscaninsertfeedsystemfields</externalDeveloperName>
    <label>Insert System Field Values for Chatter F</label>
    <type>Checkbox</type>
</CustomField>