force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscanmanagemaps__c.field-meta.xml
<CustomField>
    <fullName>permissionscanmanagemaps__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscanmanagemaps</externalDeveloperName>
    <label>Manage Analytics Custom Maps</label>
    <type>Checkbox</type>
</CustomField>