force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscanusenewdashboardbuilder__c.field-meta.xml
<CustomField>
    <fullName>permissionscanusenewdashboardbuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscanusenewdashboardbuilder</externalDeveloperName>
    <label>Drag-and-Drop Dashboard Builder</label>
    <type>Checkbox</type>
</CustomField>