force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscanverifycomment__c.field-meta.xml
<CustomField>
    <fullName>permissionscanverifycomment__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscanverifycomment</externalDeveloperName>
    <label>Verify Answers to Chatter Questions</label>
    <type>Checkbox</type>
</CustomField>