force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionschangedashboardcolors__c.field-meta.xml
<CustomField>
    <fullName>permissionschangedashboardcolors__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionschangedashboardcolors</externalDeveloperName>
    <label>Change Dashboard Colors</label>
    <type>Checkbox</type>
</CustomField>