force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionschattercomposeuicodesnippet__c.field-meta.xml
<CustomField>
    <fullName>permissionschattercomposeuicodesnippet__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionschattercomposeuicodesnippet</externalDeveloperName>
    <label>Allow Inclusion of Code Snippets from UI</label>
    <type>Checkbox</type>
</CustomField>