force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionschattereditownpost__c.field-meta.xml
<CustomField>
    <fullName>permissionschattereditownpost__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionschattereditownpost</externalDeveloperName>
    <label>Edit My Own Posts</label>
    <type>Checkbox</type>
</CustomField>