force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionschattereditownrecordpost__c.field-meta.xml
<CustomField>
    <fullName>permissionschattereditownrecordpost__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionschattereditownrecordpost</externalDeveloperName>
    <label>Edit Posts on Records I Own</label>
    <type>Checkbox</type>
</CustomField>