force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionschatterfilelink__c.field-meta.xml
<CustomField>
    <fullName>permissionschatterfilelink__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionschatterfilelink</externalDeveloperName>
    <label>Create Public Links</label>
    <type>Checkbox</type>
</CustomField>