force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionschatterinternaluser__c.field-meta.xml
<CustomField>
    <fullName>permissionschatterinternaluser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionschatterinternaluser</externalDeveloperName>
    <label>Chatter Internal User</label>
    <type>Checkbox</type>
</CustomField>