force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionschatterinviteexternalusers__c.field-meta.xml
<CustomField>
    <fullName>permissionschatterinviteexternalusers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionschatterinviteexternalusers</externalDeveloperName>
    <label>Invite Customers To Chatter</label>
    <type>Checkbox</type>
</CustomField>