force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionschatterowngroups__c.field-meta.xml
<CustomField>
    <fullName>permissionschatterowngroups__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionschatterowngroups</externalDeveloperName>
    <label>Create and Own New Chatter Groups</label>
    <type>Checkbox</type>
</CustomField>