force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscloseconversations__c.field-meta.xml
<CustomField>
    <fullName>permissionscloseconversations__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscloseconversations</externalDeveloperName>
    <label>Close Conversation Threads</label>
    <type>Checkbox</type>
</CustomField>