force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsconfigcustomrecs__c.field-meta.xml
<CustomField>
    <fullName>permissionsconfigcustomrecs__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsconfigcustomrecs</externalDeveloperName>
    <label>Configure Custom Recommendations</label>
    <type>Checkbox</type>
</CustomField>