force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsconnectorgtoenvironmenthub__c.field-meta.xml
<CustomField>
    <fullName>permissionsconnectorgtoenvironmenthub__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsconnectorgtoenvironmenthub</externalDeveloperName>
    <label>Connect Organization to Environment Hub</label>
    <type>Checkbox</type>
</CustomField>