force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscontentadministrator__c.field-meta.xml
<CustomField>
    <fullName>permissionscontentadministrator__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscontentadministrator</externalDeveloperName>
    <label>Manage Salesforce CRM Content</label>
    <type>Checkbox</type>
</CustomField>