force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscontentworkspaces__c.field-meta.xml
<CustomField>
    <fullName>permissionscontentworkspaces__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscontentworkspaces</externalDeveloperName>
    <label>Access Libraries</label>
    <type>Checkbox</type>
</CustomField>