force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsconvertleads__c.field-meta.xml
<CustomField>
    <fullName>permissionsconvertleads__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsconvertleads</externalDeveloperName>
    <label>Convert Leads</label>
    <type>Checkbox</type>
</CustomField>