force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreatecustomizedashboards__c.field-meta.xml
<CustomField>
    <fullName>permissionscreatecustomizedashboards__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreatecustomizedashboards</externalDeveloperName>
    <label>Create and Customize Dashboards</label>
    <type>Checkbox</type>
</CustomField>