force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreatecustomizefilters__c.field-meta.xml
<CustomField>
    <fullName>permissionscreatecustomizefilters__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreatecustomizefilters</externalDeveloperName>
    <label>Create and Customize List Views</label>
    <type>Checkbox</type>
</CustomField>