force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreatecustomizereports__c.field-meta.xml
<CustomField>
    <fullName>permissionscreatecustomizereports__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreatecustomizereports</externalDeveloperName>
    <label>Create and Customize Reports</label>
    <type>Checkbox</type>
</CustomField>