force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreatedashboardfolders__c.field-meta.xml
<CustomField>
    <fullName>permissionscreatedashboardfolders__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreatedashboardfolders</externalDeveloperName>
    <label>Create Dashboard Folders</label>
    <type>Checkbox</type>
</CustomField>