force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreateltngtempinpub__c.field-meta.xml
<CustomField>
    <fullName>permissionscreateltngtempinpub__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreateltngtempinpub</externalDeveloperName>
    <label>Manage Public Lightning Email Templates</label>
    <type>Checkbox</type>
</CustomField>