force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreatereportfolders__c.field-meta.xml
<CustomField>
    <fullName>permissionscreatereportfolders__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreatereportfolders</externalDeveloperName>
    <label>Create Report Folders</label>
    <type>Checkbox</type>
</CustomField>