force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreatereportinlightning__c.field-meta.xml
<CustomField>
    <fullName>permissionscreatereportinlightning__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreatereportinlightning</externalDeveloperName>
    <label>Report Builder (Lightning Experience)</label>
    <type>Checkbox</type>
</CustomField>