force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreatetopics__c.field-meta.xml
<CustomField>
    <fullName>permissionscreatetopics__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreatetopics</externalDeveloperName>
    <label>Create Topics</label>
    <type>Checkbox</type>
</CustomField>