force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreateworkbadgedefinition__c.field-meta.xml
<CustomField>
    <fullName>permissionscreateworkbadgedefinition__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreateworkbadgedefinition</externalDeveloperName>
    <label>Create custom Badge Definitions</label>
    <type>Checkbox</type>
</CustomField>