force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscreateworkspaces__c.field-meta.xml
<CustomField>
    <fullName>permissionscreateworkspaces__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscreateworkspaces</externalDeveloperName>
    <label>Create Libraries</label>
    <type>Checkbox</type>
</CustomField>