force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscustomizeapplication__c.field-meta.xml
<CustomField>
    <fullName>permissionscustomizeapplication__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscustomizeapplication</externalDeveloperName>
    <label>Customize Application</label>
    <type>Checkbox</type>
</CustomField>