force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscustommobileappsaccess__c.field-meta.xml
<CustomField>
    <fullName>permissionscustommobileappsaccess__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscustommobileappsaccess</externalDeveloperName>
    <label>Access Custom Mobile Apps</label>
    <type>Checkbox</type>
</CustomField>