force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionscustomsidebaronallpages__c.field-meta.xml
<CustomField>
    <fullName>permissionscustomsidebaronallpages__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionscustomsidebaronallpages</externalDeveloperName>
    <label>Show Custom Sidebar On All Pages</label>
    <type>Checkbox</type>
</CustomField>