force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsdataexport__c.field-meta.xml
<CustomField>
    <fullName>permissionsdataexport__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsdataexport</externalDeveloperName>
    <label>Weekly Data Export</label>
    <type>Checkbox</type>
</CustomField>