force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsdelegatedtwofactor__c.field-meta.xml
<CustomField>
    <fullName>permissionsdelegatedtwofactor__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsdelegatedtwofactor</externalDeveloperName>
    <label>Manage Two-Factor Authentication in User</label>
    <type>Checkbox</type>
</CustomField>