force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsdeleteactivatedcontract__c.field-meta.xml
<CustomField>
    <fullName>permissionsdeleteactivatedcontract__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsdeleteactivatedcontract</externalDeveloperName>
    <label>Delete Activated Contracts</label>
    <type>Checkbox</type>
</CustomField>