force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsdeletetopics__c.field-meta.xml
<CustomField>
    <fullName>permissionsdeletetopics__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsdeletetopics</externalDeveloperName>
    <label>Delete Topics</label>
    <type>Checkbox</type>
</CustomField>