force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsdistributefromperswksp__c.field-meta.xml
<CustomField>
    <fullName>permissionsdistributefromperswksp__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsdistributefromperswksp</externalDeveloperName>
    <label>Create Content Deliveries</label>
    <type>Checkbox</type>
</CustomField>