force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditactivatedorders__c.field-meta.xml
<CustomField>
    <fullName>permissionseditactivatedorders__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditactivatedorders</externalDeveloperName>
    <label>Edit Activated Orders</label>
    <type>Checkbox</type>
</CustomField>