force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditbrandtemplates__c.field-meta.xml
<CustomField>
    <fullName>permissionseditbrandtemplates__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditbrandtemplates</externalDeveloperName>
    <label>Manage Letterheads</label>
    <type>Checkbox</type>
</CustomField>