force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditcasecomments__c.field-meta.xml
<CustomField>
    <fullName>permissionseditcasecomments__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditcasecomments</externalDeveloperName>
    <label>Edit Case Comments</label>
    <type>Checkbox</type>
</CustomField>