force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditevent__c.field-meta.xml
<CustomField>
    <fullName>permissionseditevent__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditevent</externalDeveloperName>
    <label>Edit Events</label>
    <type>Checkbox</type>
</CustomField>