force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsedithtmltemplates__c.field-meta.xml
<CustomField>
    <fullName>permissionsedithtmltemplates__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsedithtmltemplates</externalDeveloperName>
    <label>Edit HTML Templates</label>
    <type>Checkbox</type>
</CustomField>