force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditknowledge__c.field-meta.xml
<CustomField>
    <fullName>permissionseditknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditknowledge</externalDeveloperName>
    <label>Manage Articles</label>
    <type>Checkbox</type>
</CustomField>