force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditmydashboards__c.field-meta.xml
<CustomField>
    <fullName>permissionseditmydashboards__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditmydashboards</externalDeveloperName>
    <label>Edit My Dashboards</label>
    <type>Checkbox</type>
</CustomField>