force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditmyreports__c.field-meta.xml
<CustomField>
    <fullName>permissionseditmyreports__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditmyreports</externalDeveloperName>
    <label>Edit My Reports</label>
    <type>Checkbox</type>
</CustomField>