force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditopplineitemunitprice__c.field-meta.xml
<CustomField>
    <fullName>permissionseditopplineitemunitprice__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditopplineitemunitprice</externalDeveloperName>
    <label>Edit Opportunity Product Sales Price</label>
    <type>Checkbox</type>
</CustomField>