force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditpublicdocuments__c.field-meta.xml
<CustomField>
    <fullName>permissionseditpublicdocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditpublicdocuments</externalDeveloperName>
    <label>Manage Public Documents</label>
    <type>Checkbox</type>
</CustomField>