force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditpublicfilters__c.field-meta.xml
<CustomField>
    <fullName>permissionseditpublicfilters__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditpublicfilters</externalDeveloperName>
    <label>Manage Public List Views</label>
    <type>Checkbox</type>
</CustomField>