force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditpublictemplates__c.field-meta.xml
<CustomField>
    <fullName>permissionseditpublictemplates__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditpublictemplates</externalDeveloperName>
    <label>Manage Public Classic Email Templates</label>
    <type>Checkbox</type>
</CustomField>