force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionseditreadonlyfields__c.field-meta.xml
<CustomField>
    <fullName>permissionseditreadonlyfields__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionseditreadonlyfields</externalDeveloperName>
    <label>Edit Read Only Fields</label>
    <type>Checkbox</type>
</CustomField>