force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsedittask__c.field-meta.xml
<CustomField>
    <fullName>permissionsedittask__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsedittask</externalDeveloperName>
    <label>Edit Tasks</label>
    <type>Checkbox</type>
</CustomField>