force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsedittopics__c.field-meta.xml
<CustomField>
    <fullName>permissionsedittopics__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsedittopics</externalDeveloperName>
    <label>Edit Topics</label>
    <type>Checkbox</type>
</CustomField>