force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsemailadministration__c.field-meta.xml
<CustomField>
    <fullName>permissionsemailadministration__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsemailadministration</externalDeveloperName>
    <label>Email Administration</label>
    <type>Checkbox</type>
</CustomField>