force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsemailmass__c.field-meta.xml
<CustomField>
    <fullName>permissionsemailmass__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsemailmass</externalDeveloperName>
    <label>Mass Email</label>
    <type>Checkbox</type>
</CustomField>