force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsemailsingle__c.field-meta.xml
<CustomField>
    <fullName>permissionsemailsingle__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsemailsingle</externalDeveloperName>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>