force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsemailtemplatemanagement__c.field-meta.xml
<CustomField>
    <fullName>permissionsemailtemplatemanagement__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsemailtemplatemanagement</externalDeveloperName>
    <label>Manage Email Templates</label>
    <type>Checkbox</type>
</CustomField>