force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsenablecommunityapplauncher__c.field-meta.xml
<CustomField>
    <fullName>permissionsenablecommunityapplauncher__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsenablecommunityapplauncher</externalDeveloperName>
    <label>Show App Launcher in Communities</label>
    <type>Checkbox</type>
</CustomField>