force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsenablenotifications__c.field-meta.xml
<CustomField>
    <fullName>permissionsenablenotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsenablenotifications</externalDeveloperName>
    <label>Send Outbound Messages</label>
    <type>Checkbox</type>
</CustomField>