force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsexportreport__c.field-meta.xml
<CustomField>
    <fullName>permissionsexportreport__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsexportreport</externalDeveloperName>
    <label>Export Reports</label>
    <type>Checkbox</type>
</CustomField>