force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsfeedpinning__c.field-meta.xml
<CustomField>
    <fullName>permissionsfeedpinning__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsfeedpinning</externalDeveloperName>
    <label>Pin Posts in Feeds</label>
    <type>Checkbox</type>
</CustomField>