force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsfieldserviceaccess__c.field-meta.xml
<CustomField>
    <fullName>permissionsfieldserviceaccess__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsfieldserviceaccess</externalDeveloperName>
    <label>Field Service Standard</label>
    <type>Checkbox</type>
</CustomField>