force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsfieldservicedispatcher__c.field-meta.xml
<CustomField>
    <fullName>permissionsfieldservicedispatcher__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsfieldservicedispatcher</externalDeveloperName>
    <label>Field Service Dispatcher</label>
    <type>Checkbox</type>
</CustomField>