force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsfieldservicemobileapp__c.field-meta.xml
<CustomField>
    <fullName>permissionsfieldservicemobileapp__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsfieldservicemobileapp</externalDeveloperName>
    <label>Field Service Mobile</label>
    <type>Checkbox</type>
</CustomField>