force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsfieldservicescheduling__c.field-meta.xml
<CustomField>
    <fullName>permissionsfieldservicescheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsfieldservicescheduling</externalDeveloperName>
    <label>Field Service Scheduling</label>
    <type>Checkbox</type>
</CustomField>