force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsflowuflrequired__c.field-meta.xml
<CustomField>
    <fullName>permissionsflowuflrequired__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsflowuflrequired</externalDeveloperName>
    <label>Require Flow User Feature License</label>
    <type>Checkbox</type>
</CustomField>