force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsforcetwofactor__c.field-meta.xml
<CustomField>
    <fullName>permissionsforcetwofactor__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsforcetwofactor</externalDeveloperName>
    <label>Two-Factor Authentication for User Inter</label>
    <type>Checkbox</type>
</CustomField>