force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsgiverecognitionbadge__c.field-meta.xml
<CustomField>
    <fullName>permissionsgiverecognitionbadge__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsgiverecognitionbadge</externalDeveloperName>
    <label>Give Recognition Badges in Lightning Com</label>
    <type>Checkbox</type>
</CustomField>