force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsgovernnetworks__c.field-meta.xml
<CustomField>
    <fullName>permissionsgovernnetworks__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsgovernnetworks</externalDeveloperName>
    <label>Manage Communities</label>
    <type>Checkbox</type>
</CustomField>