force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionshidereadbylist__c.field-meta.xml
<CustomField>
    <fullName>permissionshidereadbylist__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionshidereadbylist</externalDeveloperName>
    <label>Hide the Seen By List</label>
    <type>Checkbox</type>
</CustomField>