force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsidentityconnect__c.field-meta.xml
<CustomField>
    <fullName>permissionsidentityconnect__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsidentityconnect</externalDeveloperName>
    <label>Use Identity Connect</label>
    <type>Checkbox</type>
</CustomField>