force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsidentityenabled__c.field-meta.xml
<CustomField>
    <fullName>permissionsidentityenabled__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsidentityenabled</externalDeveloperName>
    <label>Use Identity Features</label>
    <type>Checkbox</type>
</CustomField>