force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsimportcustomobjects__c.field-meta.xml
<CustomField>
    <fullName>permissionsimportcustomobjects__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsimportcustomobjects</externalDeveloperName>
    <label>Import Custom Objects</label>
    <type>Checkbox</type>
</CustomField>